[package]
name = "raworc-agent-rust-demo"
version = "0.1.0"
edition = "2021"
description = "Simple Pirate-speaking agent for Raworc powered by Claude LLM"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"